# data-science-project-Home-Credit-Default-Risk

./: README.md  pyproject.toml
data-science-project-Home-Credit-Default-Risk/: EDA-project.ipynb  EDA.ipynb  RANDOMFOREST.ipynb
data-science-project-Home-Credit-Default-Risk/assets/: .~lock.HomeCredit_columns_description.csv#  .~lock.application_train.csv#  download-csv-url.txt
