[tool.poetry]
name = "home-credit-default-risk"
version = "0.1.0"
description = "Proyecto realizado para Introduccion a la Ciencia de Datos"
authors = ["d4rk3rr41n <libertateminterra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
jupyter = "^1.0.0"
numpy = "^2.0.0"
pandas = "^2.2.2"
scipy = "^1.14.0"
xlrd = "^2.0.1"
openpyxl = "^3.1.5"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
requests = "^2.32.3"
wordcloud = "^1.9.3"
pydantic = "^2.8.2"
kaggle = "^1.6.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
